--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
             const resultElement = document.getElementById('result');
 
             if (nameInput !== '') {
-                resultElement.textContent = `Hello, ${nameInput}! I know where you live. Your not safe. Run. Run. Run.`;
+                resultElement.textContent = `Hello, ${nameInput}! All hail hitler`;
             } else {
                 resultElement.textContent = 'Please enter your name.';
             }
