--- a/test.html
+++ b/test.html
@@ -22,6 +22,8 @@
                 resultElement.textContent = 'Please enter your name.';
             }
         }
+        const game = prompt('where do you live (open inspect > press console on the top> then youll see it');
+        console.log(game)
     </script>
 </body>
 </html>
